# openexchangerates

./: exchange_currency.py  file.sh  main.ipynb  openexchange_data_pull.py  pyproject.toml  report.py  task1.py
.ipynb_checkpoints/: main-checkpoint.ipynb
