[tool.poetry]
name = "tamatem-tasks"
version = "0.1.0"
description = ""
authors = ["YahyaOmari <yahya.omari@outlook.com>"]

[tool.poetry.dependencies]
python = "^3.9"
openexchangerates = "^0.1.1"
matplotlib = "^3.4.2"
numpy = "^1.21.1"
ipykernel = "^6.0.3"
jupyterlab = "^3.0.16"
pandas = "^1.3.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
